# unstaple

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/unstaple/: __init__.py  __main__.py  cli.py  features.py  naming.py  scoring.py  splitter.py
tests/: conftest.py  test_end_to_end.py  test_features.py  test_naming.py  test_scoring.py
tests/fixtures/: make_fixtures.py
